--- a/index.html
+++ b/index.html
@@ -87,6 +87,8 @@
     </div>
     <!-- end::hero -->
 
+    <!-- Tes -->
+
     <!-- Start::about -->
     <div class="about">
         <div class="container">
