progress mas albian

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <link rel="stylesheet" href="css/footer.css" />
     <link rel="stylesheet" href="css/form.css" />
     <link rel="stylesheet" href="css/about.css" />
-    <link rel="stylesheet" href="css/footer-2.css" />
 
     <!-- script -->
     <script src="https://use.fontawesome.com/a5f18fcfe4.js"></script>
@@ -105,46 +104,44 @@
 
     <!-- Tes -->
 
-    <!-- Start::about -->
-    <div class="about" id="about">
-      <div class="container">
-        <h2>
-          <b>InternetKilat</b> menawarkan berbagai paket super cepat dengan
-          harga super terjangkau. Bayar lebih murah untuk kualitas dan kecepatan
-          lebih baik.
-        </h2>
-        <div class="keunggulan">
-          <p>
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-              <!-- Font Awesome Pro 5.15.4 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) -->
-              <path
-                d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
-              />
-            </svg>
-            Murah
-          </p>
-          <p>
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-              <!-- Font Awesome Pro 5.15.4 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) -->
-              <path
-                d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
-              />
-            </svg>
-            Cepat
-          </p>
-          <p>
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-              <!-- Font Awesome Pro 5.15.4 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) -->
-              <path
-                d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
-              />
-            </svg>
-            Stabil
-          </p>
-        </div>
+  <!-- Start::about -->
+  <div class="about">
+    <div class="about-container">
+      <div class="about-img">
+        <img src="https://www.biznethome.net/images/mesh-wifi.gif">
+      </div>
+      <div class="about-text">
+        <h1>Smart InternetKilat WiFi</h1>
+        <p>Lengkapi koneksi InternetKilat WiFi Home kamu dengan Smart Internet WiFi, perangkat tambahan yang dilengkapi
+          dengan Teknologi Mesh WiFi AC1200 Whole-Home Mesh.</p>
+        <p>Dengan Smart Internet WiFi, jangkauan internet WiFi di rumah menjadi lebih luas dan lebih cepat sampai dengan
+          800 Mbps.</p>
+        <br>
+        <br>
+        <a class="about-button" href="#">Lihat Selengkapnya</a>
       </div>
     </div>
-    <!-- End::about -->
+    <div class="about-separator"></div>
+    <div class="about-container">
+      <div class="about-img-map">
+        <img src="images/map.png">
+      </div>
+      <div class="about-text-profile">
+        <h1>#InternetKilatIndonesia</h1>
+        <p>
+          <svg width="15" height="15" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512">
+            <path
+              d="M240.5 224H352C365.3 224 377.3 232.3 381.1 244.7C386.6 257.2 383.1 271.3 373.1 280.1L117.1 504.1C105.8 513.9 89.27 514.7 77.19 505.9C65.1 497.1 60.7 481.1 66.59 467.4L143.5 288H31.1C18.67 288 6.733 279.7 2.044 267.3C-2.645 254.8 .8944 240.7 10.93 231.9L266.9 7.918C278.2-1.92 294.7-2.669 306.8 6.114C318.9 14.9 323.3 30.87 317.4 44.61L240.5 224z" />
+          </svg>
+          <b>InternetKilat</b>
+          merupakan perusahaan infrastruktur digital terintegrasi di Indonesia yang berdiri sejak tahun
+          2022. Kami menyediakan layanan Internet, Data Center, Cloud Computing dan IPTV. Customer Care dan Network
+          Operation Center kami selalu tersedia 25/7, kamu dapat menghubungi kami melalui telepon, email atau live chat.
+        </p>
+      </div>
+    </div>
+  </div>
+  <!-- End::about -->
 
     <!-- start::paket -->
     <div class="list-paket" id="paket">
