--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     <!-- Tes -->
 
   <!-- Start::about -->
-  <div class="about">
+  <div class="about" id="about">
     <div class="about-container">
       <div class="about-img">
         <img src="https://www.biznethome.net/images/mesh-wifi.gif">
@@ -198,7 +198,7 @@
 
     <!-- start::form -->
     <form action="">
-      <div class="form-content">
+      <div class="form-content" id="contact">
         <div class="form-item title">
           <h3>Apa yang ingin kamu tanyakan?</h3>
         </div>
